<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="weekly_subscription_type">weekly</string>
    <string name="monthly_subscription_type">monthly</string>
    <string name="yearly_subscription_type">yearly</string>

    <string name="face_find_subscription_check" translatable="false">https://wuinn4w2w3.execute-api.us-west-2.amazonaws.com/live/validatetoken?token=%1$s&amp;subscriptionId=%2$s&amp;packageName=com.viyatek.facefind</string>
    <string name="face_find_subscription_validation" translatable="false">https://wuinn4w2w3.execute-api.us-west-2.amazonaws.com/live/getbytoken?token=%1$s&amp;packageName=com.viyatek.facefind</string>

    <string name="face_find_subscription_check_end_point" translatable="false">https://wuinn4w2w3.execute-api.us-west-2.amazonaws.com/live/validatetoken</string>
    <string name="face_find_subscription_validation_end_point" translatable="false">https://wuinn4w2w3.execute-api.us-west-2.amazonaws.com/live/getbytoken</string>

    <string name="viyatek_subscription_check" translatable="false">https://0tg0ktrj7h.execute-api.us-west-2.amazonaws.com/live/getbytoken?token=%1$s&amp;packageName=%2$s</string>
    <string name="viyatek_subscription_validation" translatable="false">https://0tg0ktrj7h.execute-api.us-west-2.amazonaws.com/live/validatetoken?token=%1$s&amp;subscriptionId=%2$s&amp;packageName=%3$s</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="viyatek_subscription_validation_end_point" translatable="false">https://0tg0ktrj7h.execute-api.us-west-2.amazonaws.com/live/subscriptions-validatetoken-v2</string>
    <string name="viyatek_subscription_check_endpoint" translatable="false">https://0tg0ktrj7h.execute-api.us-west-2.amazonaws.com/live/subscriptions-getbytoken-v2</string>

    <string name="privacy_policy_url" translatable="false">https://viyatek.io/privacy/</string>
    <string name="terms_of_use_url" translatable="false">https://viyatek.io/terms/</string>

    <string name="lifetime_motto">Pay once use forever</string>
    <string name="cancel_anytime">Cancel anytime</string>

    <string name="save_50">SAVE %1$s</string>
    <string name="stand_alone_save_string_pay_once">SAVE %1$s, just <s>%2$s</s> %3$s</string>
    <string name="stand_alone_save_string">SAVE %1$s, just <strike>%2$s</strike> %3$s/%4$s</string>
    <string name="stand_alone_save_string_custom_time">SAVE %1$s, just <s>%2$s</s> %3$s/%4$d %5$s</string>

    <string name="yearly_plan_price">Just %1$s/year</string>
    <string name="monthly_plan_price">Just %1$s/month</string>
    <string name="life_time_plan_price">Just %1$s</string>

    <string name="plan_price_without_free_trial">Just %1$s/%2$s</string>
    <string name="plan_price_with_free_trial">Try %1$s-days free, then %2$s/%3$s</string>
    <string name="plan_price_with_free_trial_custom_time">Try %1$s-days free, then %2$s/%3$d %4$s</string>
    <string name="plan_price_without_free_trial_custom_time">Just %1$s/%2$d %3$s</string>

    <string name="start_subscription_button">Upgrade to Premium</string>
    <string name="premium_title">UPGRADE TO PREMIUM</string>
    <string name="start_my_free_trial_button">Start My Free Trial</string>
    <string name="premium_below_button_info">3 days free, then just %1$s/%2$s \n Cancel Anytime</string>
    <string name="premium_plan_button_info">Just %1$s \n Forever </string>
    <string name="premium_below_button_info_non_free_trial">%1$s/%2$s \n Cancel Anytime</string>

    <string name="access_to_all_features">Access to All Features</string>
    <string name="unlock_premium">UNLOCK PREMIUM</string>

    <string name="thousands_of_new_facts_articles" translatable="false"><![CDATA[Thousands of New Facts & Articles]]></string>

    <string name="backup_premium_text" translatable="false">Backup your bookmarks and seen facts.</string>
    <string name="close_premium_sale_page" translatable="false">Close Premium Sale Page</string>
    <string name="regularly_updated_content" translatable="false">Regularly Updated Content</string>

    <string name="premium_cond_1" translatable="false">Thousands of handpicked quotes</string>
    <string name="premium_cond_2" translatable="false">Unlock All Premium Themes</string>
    <string name="premium_cond_3" translatable="false">Ad Free Experience</string>
    <string name="premium_cond_4" translatable="false">Remove Watermark</string>

    <string name="select_plan_text">Select your plan to start your 3-day trial or lifetime purchase</string>
    <string name="select_plan_text_new_premium">Try %1$s-days free, then %2$s/year</string>
    <string name="select_plan_text_non_free">Select a plan to start your subscription or lifetime purchase</string>

    <string name="premium_sale_page_background" translatable="false">Premium Sale Page Background</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="divider" translatable="false">|</string>
    <string name="see_other_subscription_plans">See other subscription plans</string>
    <string name="subscribe_now">SUBSCRIBE NOW</string>
    <string name="pay_once">Pay once</string>
    <string name="campaign_photo" translatable="false">Campaign Photo</string>
    <string name="special_offer">Special Offer</string>

    <string name="verification_problem">An error occurred while validating your purchase. Your membership will start automatically if you have successfully paid</string>
    <string name="verification_success">Your subscription is successfully verified</string>
    <string name="dialogue_image" translatable="false">Dialogue Image</string>
    <string name="progress">Please Wait.\n\n We are verifying your purchase</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="premium_purchase">Thank you for your purchase. You are premium member now.</string>

    <string name="subscription_term_of_use" translatable="false">
        By starting your subscription, your payment will be charged to your Google Play Account, and your subscription will automatically renew
        at the same price until you cancel in settings in Google Play store. By tapping "Upgrade Premium" you agree
        to our &lt;a href="http://www.viyateknoloji.com/ultimate-facts-terms-of-use/">Terms of Service&lt;/a>
    </string>

    <string name="premium_purchase_terms" translatable="false">
By tapping "Upgrade Premium" you agree
        to our &lt;a href="http://www.viyateknoloji.com/ultimate-facts-terms-of-use/">Terms of Service&lt;/a>
    </string>

    <string name="subscription_term_of_use_free" translatable="false">
        By clicking "Start My Free Trial", you will begin your 3-day free trial. Your payment will be charged to your Google
        Play Account after free trial. Your subscription will automatically renew at the same price until you cancel in
        settings in Google Play store. By tapping "Start My Free Trial" you agree to our &lt;a href="http://www.viyateknoloji.com/ultimate-facts-terms-of-use/">Terms of Service&lt;/a>
    </string>
    <string name="uf_premium_second" translatable="false">45+ Topics</string>
    <string name="uf_premium_third" translatable="false">Regularly Updated Content</string>
    <string name="uf_premium_forth" translatable="false">Ad Free Experience</string>
    <string name="uf_premium_fifth" translatable="false">Access Audio Content of All Facts</string>

    <string name="premium_subtitle">Unlimited Access</string>
    <string name="facie">Facie</string>
    <string name="premium_continue_button">Continue</string>

    <string name="by_subscribing">By subscribing to Facie, you agree to our</string>
    <string name="and">and</string>
    <string name="pro">PRO</string>
    <string name="unlock_all_features">Unlock All Features.\n No Ads. No Watermarks.</string>
    <string name="subscribe">Subscribe</string>
    <string name="try_3_days_for_free">TRY %1$d DAYS FOR FREE</string>

    <string name="then_price_campaign_if_not_canceled">then %1$s %2$s/%3$s</string>
    <string name="then_price_campaign_if_not_canceled_custom_time">then %1$s %2$s/%3$d %4$s</string>

    <string name="then_price_if_not_canceled">then %1$s/%2$s</string>
    <string name="then_price_if_not_canceled_custom_time">then %1$s/%2$d %3$s</string>
    <string name="monthly_price_info">(%1$d months at %2$s/month SAVE %3$s)</string>

</resources>