<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/upgrade_premium_layout_group"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:showIn="@layout/fragment_stand_alone_sale">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/viyatek_premium_trial_button"
        style="@style/special_offer_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/proximanovasemibold"
        android:text="@string/premium_continue_button"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="@dimen/premium_pack_button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/viyatek_other_plans"
        app:layout_constraintDimensionRatio="5.5:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".9" />

    <TextView
        android:id="@+id/viyatek_other_plans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/proximanovasemibold"
        android:text="@string/see_other_subscription_plans"
        android:textColor="@android:color/white"
        android:textSize="@dimen/premium_pack_text"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/viyatek_privacy_policy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/viyatek_and_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proximanovalight"
        android:text="@string/divider"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/viyatek_privacy_policy"
        app:layout_constraintEnd_toStartOf="@+id/viyatek_terms_of_use"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/viyatek_privacy_policy"
        app:layout_constraintTop_toTopOf="@+id/viyatek_privacy_policy"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/viyatek_privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/proximanovalight"
        android:text="@string/privacy_policy"
        android:textAlignment="textEnd"
        android:textColor="@android:color/white"
        android:textSize="@dimen/premium_little_text_size"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viyatek_and_divider"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/viyatek_premium_trial_button"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/viyatek_terms_of_use"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proximanovalight"
        android:text="@string/terms_of_use"
        android:textColor="@android:color/white"
        android:textSize="@dimen/premium_little_text_size"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/viyatek_privacy_policy"
        app:layout_constraintEnd_toStartOf="@+id/viyatek_choice_divider"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/viyatek_and_divider"
        app:layout_constraintTop_toTopOf="@+id/viyatek_privacy_policy"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/viyatek_choice_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proximanovalight"
        android:text="@string/divider"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/viyatek_terms_of_use"
        app:layout_constraintEnd_toStartOf="@+id/viyatek_restore_purchase_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/viyatek_terms_of_use"
        app:layout_constraintTop_toTopOf="@+id/viyatek_terms_of_use"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/viyatek_restore_purchase_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restore_purchase"
        android:fontFamily="@font/proximanovalight"
        android:textColor="@android:color/white"
        android:textSize="@dimen/premium_little_text_size"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/viyatek_choice_divider"
        app:layout_constraintEnd_toEndOf="@+id/viyatek_premium_trial_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/viyatek_choice_divider"
        app:layout_constraintTop_toTopOf="@+id/viyatek_choice_divider" />

</androidx.constraintlayout.widget.ConstraintLayout>